--- a/index.html
+++ b/index.html
@@ -1117,7 +1117,7 @@
                     dream.type,
                     dream.mood || '',
                     `"${dream.content.replace(/"/g, '""')}"`,
-                    `"${dream.tags || '"}"`
+                    `"${dream.tags || ''}"`
                 ].join(','))
             ].join('\n');
             
